# arrpc-rust

./: .todo  Cargo.toml  README.md  client.js
src/: consts.rs  handle_activity.rs  main.rs  utils.rs
src/servers/: ipc.rs  mod.rs  web_side.rs  websockets.rs
