[package]
name = "arrpc-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
futures-util = "0.3.30"
scopeguard = "1.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
